# desafio-02

./: bank.db  blog.db  pyproject.toml  requirements.txt
src/bank/: database.py  main.py  pyproject.toml  security.py
src/bank/controllers/: account.py  auth.py  history.py  post.py  transaction.py
src/bank/models/: account.py  history.py  post.py  transaction.py  user.py
src/bank/schemas/: __init__.py  account.py  auth.py  post.py  transaction.py
src/bank/services/: account.py  auth.py  authenticate.py  create_user.py  post.py  transaction.py  user_service.py
src/bank/views/: post.py
tests/: conftest.py
tests/integration/controllers/post/: test_create_post.py  test_delete_post.py  test_read_all.py  test_read_post.py  test_update_post.py
